--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,10 @@ body.no-scroll {
   overflow: hidden;
 }
 
+.jvm-tooltip.active {
+  padding: 0.5rem 1rem !important;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
