--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,11 @@ body.no-scroll {
     --background-end-rgb: 0, 0, 0;
   }
 }
+
+@media (min-width: 90rem) {
+  body {
+    display: flex;
+    justify-content: center;
+    background-color: white; /* Set background color to white */
+  }
+}
